Move mercury to run as none root